# FL-BT

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.client  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  reset_docker  start.bat  utils.py
desktop_client/: build.gradle.kts  settings.gradle.kts
desktop_client/app/: build.gradle.kts
desktop_client/app/src/main/kotlin/com/lucasalfare/flbt/client/desktop/: Main.kt
desktop_client/gradle/: libs.versions.toml
server/: Dockerfile  celery_app.py  celery_worker.py  github_as_cdn_helper.py  lib.py  logging_config.py  main.py  queue_manager.py  requirements.txt  tasks.py
web_client/: package-lock.json  package.json
web_client/src/: App.jsx
