# pyproject.toml
[project]
name = "fl-bt"
version = "1.0"
description = "Web API for extracting audio stems from YouTube using Spleeter. Ideal for quick backing track generation. Powered by FastAPI, Celery, and pytubefix."
requires-python = "==3.10.*"
# leaving the dependencies versions as UV has set
dependencies = [
    "celery>=5.1.2",
    "fastapi>=0.116.0",
    "numpy<2",
    "psutil>=7.0.0",
    "pytubefix>=9.3.0",
    "redis>=6.2.0",
    "spleeter>=2.4.0",
    #    "tensorflow-io-gcs-filesystem==0.31.0", # needed for windows dev?
    "uvicorn>=0.35.0",
]